# online-dot

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: autoyapf.yml  ci.yml
src/online-dot/: dot.py
src/onlinedot/: __init__.py  __main__.py  dot.py
tests/: test_basic.py
