[metadata]
name = onlinedot
version = 0.1
author = Morgan Fouesneau
author_email = fouesneau@mpia.de
description = A dot command line replacement wrapping graphviz.glitch.me online service
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files =
    LICENSE
url = https://github.com/mfouesneau/online-dot
project_urls =
    Bug Tracker = https://github.com/mfouesneau/online-dot/issues
    Sourse Code = https://github.com/mfouesneau/online-dot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"

[options.entry_points]
console_scripts =
    dot = onlinedot:main

[options.packages.find]
where = src

[options.extras_require]
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov